Finding which ip calling

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,10 @@
     <title>Sign Up Form by Colorlib</title>
 </head>
 <body>
+    <h1>Runing on Following Server</h1>
+          {% for n in ip %}
+            <p>{{ n }}</p>
+          {% endfor %}
 
     <div class="main">
 
